# memory-mini

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EMBEDDINGS.md  LIFECYCLE.md  USAGE.md
examples/: agent_session.py
src/memory_mini/: __init__.py  cli.py  embeddings.py  lifecycle.py  namespace.py  search.py  store.py  types.py
tests/: test_memory_mini.py
