[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-mini"
version = "0.1.0"
description = "Minimal reference for durable agent memory: namespaced KV with upsert, soft-delete, cleanup, optional embeddings, SQLite-backed"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Justin Leopard" }]
dependencies = []
keywords = ["memory", "agents", "sqlite", "kv", "embeddings"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
embed = ["numpy"]
dev = ["mypy", "pytest", "pytest-cov", "ruff"]

[project.scripts]
memory-mini = "memory_mini.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_mini"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["memory_mini"]

[[tool.mypy.overrides]]
module = ["numpy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
